Capybara DSL Snippets.

--- a/info.plist
+++ b/info.plist
@@ -290,6 +290,16 @@
 		<string>57EF6130-05A6-4117-94CB-C0BD63328334</string>
 		<string>377BD4F9-4321-4D14-9A34-6A93033F1906</string>
 		<string>1C280956-9F2D-4C91-862E-ECE5FFFFEA41</string>
+		<string>73A67D49-CA5B-4B8A-9B62-003506276CDD</string>
+		<string>CB74269F-B784-4772-A67E-D7BE172510B1</string>
+		<string>3F8FC312-A272-4A60-931E-26EC196ACE2E</string>
+		<string>C50A0528-99EF-4E40-BB8B-C0827CB4398A</string>
+		<string>DDDA0302-77AA-4679-9B47-7B18E4D78887</string>
+		<string>7313CDE5-CD35-4439-ACFF-8023AFEA934F</string>
+		<string>36C1BB4F-55B3-4B65-BE67-D23810DC9A8F</string>
+		<string>AC44A4B2-D862-4B15-97A9-C222909AE20A</string>
+		<string>D13C48F3-C62B-4456-B075-36B424D573CC</string>
+		<string>F0524EA5-3438-4238-871C-A5AAAAFC8CA3</string>
 	</array>
 	<key>uuid</key>
 	<string>4CEA47CC-2C3A-45FB-80BE-3820828227C2</string>
